@@ -1947,7 +1947,7 @@ lblDonate=Doneer
 sysMovie_externalreferenceFieldID=ID
 sysLanguage=Taal
 0x0680=VME VMPCM
-lblRestoreReports=Rapporten terugzetten (XSL files)
+lblRestoreReports=Rapporten terugzetten
 0x0681=AT&T TPC
 tpItemExportWizard=Hiermee kunnen items worden weggeschreven naar een XML of tekst bestand. Dit bestand kan vervolgens worden gebruikt om de items in een andere systeem of een andere Data Crow installatie te importeren.
 sysMovie_storagemediumFieldName=Naam
