@@ -583,10 +583,11 @@ public class DcModule implements Comparable<DcModule>, Serializable {
      */
     public boolean isCustomModule() {
         return ((getIndex() < 50 ||
-                (getIndex() >= 20000 && getIndex() < 30000)) ||
+                (getIndex() >= 20000 && getIndex() <= 30000)) ||
                  getIndex() >= 10000000) &&
                 getType() != DcModule._TYPE_TEMPLATE_MODULE && 
-                getType() != DcModule._TYPE_MAPPING_MODULE ;
+                getType() != DcModule._TYPE_MAPPING_MODULE &&
+                DcModules.getPropertyBaseModule(getIndex()) == null;
     } 
     
     /**
