@@ -262,7 +262,7 @@ lblMatchOnFilename = Match only on Filename
 lblMatchOnFilenameAndSize = Match on Filesize and Filename  
 lblUndoGrouping = Undo Grouping
 lblRestoreDatabase = Restore Database (items & images)
-lblRestoreReports = Restore Report Templates (XSL files)
+lblRestoreReports = Restore Report Templates
 lblRestoreModules = Restore Modules
 lblDecimalGroupingSymbol = Decimal Grouping Symbol
 lblDecimalSeperatorSymbol = Decimal Separator Symbol
