@@ -68,6 +68,10 @@ BoardGamesAtlas.com. On the Movie front a new online search has been added; Movi
   information.
 - Removed references to no longer existing parameters (-clearsettings and -nosplash).
 - Property maintenance overviews did not adhere to the descriptive field settings.
+- Fixed a NullPointerException in the Auto Numbering tool in case order
+  fields were selected except for the first level.
+- File Importer; the specific music file import dialog was not used in the Music Album
+  module, instead the generic import dialog was shown.
 
 [To Do]
 - Move help to online.
